<resources>
    <string name="app_name">Xber-Admin</string>
    <string name="spot_manage">任务点管理</string>
    <string name="driver_list">司机列表</string>
    <string name="published_task">已派发的任务</string>
    <string name="dispatch_task">任务派发</string>
    <string name="car_monitoring">车辆监控</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="please_input_car">请输入司机姓名/车牌号</string>
    <string name="please_input_addr">请输入始发地/目的地</string>
    <string name="please_select_start_addr">请选择始发地</string>
    <string name="please_select_end_addr">请选择目的地</string>
    <string name="please_select_start_time">请选择开始时间</string>
    <string name="please_select_end_time">请选择结束时间</string>
    <string name="query_success">^_^ 查询成功!</string>
    <string name="empty_data">暂时没有数据~</string>
    <string name="please_name_it">给这个地方起个名字吧！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_view_name">tracePreview</string>
    <string name="setting_max_car_count" >setting_max_car_count</string>
    <string name="setting_animate_thread_count">setting_animate_thread_count</string>
    <string name="setting_notification">setting_notification</string>
</resources>
