<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_car_monitor"
            android:icon="@drawable/flat_circle"
            android:title="@string/car_monitoring"/>
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_task_send"
            android:icon="@drawable/edit"
            android:title="@string/dispatch_task"/>
        <item
            android:id="@+id/menu_task_has_sent"
            android:icon="@drawable/folder"
            android:title="@string/published_task"/>
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/menu_drivers"
            android:icon="@drawable/team"
            android:title="@string/driver_list"/>
        <item
            android:id="@+id/menu_spot"
            android:icon="@drawable/road_cone"
            android:title="@string/spot_manage"/>
    </group>
</menu>